# build123d-ocp-preview

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
build123d_ocp_preview/: cli.py  config.py  filtering.py  reloader.py  runner.py  runner_child.py  viewer.py  watcher.py
tests/: test_cli.py  test_config.py  test_filtering.py  test_reloader.py  test_runner.py  test_viewer.py  test_viewer_open.py  test_watcher.py
